assets/css/style.css
/* --------- main pages colors */
#landing-page-container {
    /* OLD COLOR WAS NOT WORKING RGB(207,204, 204) LOOK TO WASH OUT */
    background-color: rgb(202, 245, 239); 
}

.main-conatainer {
    background-color: rgb(10, 59, 77);
}

/* --------- Global style */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.main-conatainer {
    display: flex;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
}

/* LANDING PAGE CONTAINER */

#landing-page-container {
    display: flex;
    width: 100vw;
    height: 100vh;
    justify-content: center;
    align-items: center;
}

.justify-center {
    display: flex;
    justify-content: center;
}

#landing-page {
    position: relative;
    height: 80vh;
    width: 80vw;
    background-color: rgb(10, 59, 77);
    border-radius: 20px;
}

#world {
    padding-left: 10px;
    padding-top: 10px;
    margin-bottom: 30px;
}

#title {
    text-align: center;
    margin-bottom: 20px;
    color:rgb(243, 105, 0);
    font-size: 40px;
}

.start-btn {
    text-align: center;
    font-size: 18px;
    width: 150px;
    padding: 10px;
    background-color:rgba(118, 163, 157, 1);
    color: white;
    border-radius: 10px;
    border: 1px solid white;
    margin: 0 auto;
    margin-bottom: 15px;  
}

#hands {
    position: absolute;
    transform:translate(-50%, 2%);
    bottom: 0%;
    left: 50%;
}

#image-hands {
    width: 70vw;
    height: 25vh;
}

/* INSTRUCTIONS MODAL */

.model-container {
    position: fixed;
    background-color: rgba(118, 163, 157, 1);
    color: white;
    border: 1px solid black;
    border-radius: 10px;
    transform: translate(-50%,-50%);
    top: 50%;
    left: 50%;
    z-index: 20;
    width: 70%;
    height: 65%; /* This keep the scroll on mobile and no scroll on desktop */
    overflow: scroll;  
}

.modal-heading {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 20px; 
}

.modal-heading h2 {
    font-size: 30px;
    color: black;
    text-decoration: underline;
}

.close-btn {
    font-size: 35px;
    border: none;
    background: none;
    color:rgb(243, 105, 0);
    cursor: pointer;
}

.modal-body {
    padding: 0px 20px 30px 40px;
    color: white;
    font-size: 18px;
    line-height: 25px;
}

/* GAME CONTAINER PAGE */

#game {
    width: 75%; 
    margin: auto 0; 
}

/* #question-circle */
.circle {
    position: relative;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    text-align: center;
    background-color: rgb(243, 105, 0);
    border: 1px solid white;
}

.circle-number-text {
    position: absolute;
    transform: translate(-50%,-50%);
    top: 50%;
    left: 50%;
    font-size: 30px;
    color: white;
}

#question-hub {
    flex-direction: column;
    text-align: center;
    margin-top: 30px; 
}

#question {
    font-size: 30px;
    color: white;
}

/* ANSWER CONTAINER */
#select-container {
    display: grid;
    /* grid-template-columns: repeat(2, auto); */
    justify-content: space-evenly;
    gap: 8px;
    margin: 20px;
    margin-bottom: 20px;
}

.btn {
    font-size: 18px;
    background-color:rgb(243, 105, 0);
    color: white;
    border-radius: 10px;
    border: 1px solid white;
    padding: 15px;
    width: 100%;
    text-align: center;
}

#image-container {
    margin-top: 20px;
}

img {
    height: 100px;
}

/* TIMER */

#clock-container {
    position: relative;
    height: 80px;
    width: 80px;
    background-color: rgb(243, 105, 0);
    text-align: center;
    border-radius: 50%;
    margin-left: 10px;
    margin-bottom: 10px;
    border: 1px solid white;
}

#counter {
    position:absolute;
    transform: translate(-50%,-50%);
    top: 50%;
    left: 50%;
    font-size: 20px;
    color: white;
}

/* Score Page */

.score-container {
    width: 80vw;
    height: 80vh;
    justify-content: center;
    align-items: center;
    border-radius: 10%;   
}

.center {
margin: 0 auto;
}

#score-hub {
    flex-direction: column;
    text-align: center;
    margin-top: 40px;
}

#form-player-score {
    margin: 8% auto;
    margin-bottom: 0px;
}

.btns-hub {
    flex-direction: column;
    text-align: center;
}

#score {
    font-size: 30px;
    margin-top: 20px;
    margin-bottom: 20px;
    color: white;
}

#player-name {
    display: block;
    margin: auto;
    font-size: 16px;
    width: 80%;
    padding: 10px;
    margin-bottom: 15px;
    border: none;
    border-radius: 10px;
}

.model-container-scoretable {
    position: fixed;
    background-color: rgba(118, 163, 157, 1);
    color: white;
    border: 1px solid black;
    border-radius: 20px;
    transform: translate(-50%,-50%);
    top: 50%;
    left: 50%;
    z-index: 20;
    width: 50%;
    height: 30%;
}

.model-container-scoretable, h3 {
    text-align: center;
    font-size: 30px;
    margin-top: 10px;
    
}

#Highest-score-list {
    text-align: center;
    list-style: none;
    padding-left: 20px;
    font-size: 20px;
    line-height: 1.5;
}

@media screen and (min-width: 991px) and (max-width: 2000px) {
    #select-container {
        grid-template-columns: repeat(2, auto);
    }

    img {
        height: 150px;
    }

    #image-world {
        height: 200px;
    }

    #title {
        font-size: 60px;
    }

    #image-hands {
        width: auto;
    }

    #image-world {
        height: 150px;
    }

}

@media only screen and (min-device-width: 831px) and (max-device-width: 1024px){
    #image-world {
        display: block;
    }

   }

@media screen and (orientation:landscape) and (min-device-width: 319px) 
and (max-device-width: 830px) {
    #image-world {
        display: none;
    }

    #image-hands {
        width: 50vw;
    }

 }

